--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: go
 go:
   - 1.11.x
 install:
-  - go get github.com/gohugoio/hugo
+  - go get https://github.com/gohugoio/hugo
 script:
   - mkdir -p themes/beautifulhugo && git clone https://github.com/halogenica/beautifulhugo.git themes/beautifulhugo
   - hugo --theme beautifulhugo
 deploy:
   provider: pages
   skip_cleanup: true
-  GitHub_token: $GITHUB_TOKEN
+  github_token: $GITHUB_TOKEN
   local_dir: public
   on:
     branch: master
